--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
           <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill"
             style="background-color: #35c5f0;">
             99+
-            <span class="visually-hidden">unread messages</span>
+            <span class="visually-hidden">unread message</span>
           </span>
         </a>
         <!-- 후기  -->
