--- a/accounts/templates/accounts/signin.html
+++ b/accounts/templates/accounts/signin.html
@@ -19,6 +19,8 @@
     <input type="submit" class="btn py-2 form-control fw-bold" style="background-color: #33c4f0; color: white"
       value="로그인">
   </form>
+  <form action="{% url 'kakaoLogin:kakaoLoginLogic' %}" method="GET">
+    <input type="submit" value="카카오로그인" /></form>
 
   <hr>
   <div class="d-flex justify-content-center">
@@ -27,40 +29,4 @@
   </div>
 </div>
 
-<a class="d-flex justify-content-center"id="kakao-login-btn" href="javascript:loginWithKakao()">
-  <img src="https://k.kakaocdn.net/14/dn/btroDszwNrM/I6efHub1SN5KCJqLm1Ovx1/o.jpg" width="222" alt="카카오 로그인 버튼" />
-</a>
-<p id="token-result"></p>
-<script>
-  function loginWithKakao() {
-      Kakao.Auth.authorize({
-          redirectUri: 'https://developers.kakao.com/tool/demo/oauth',
-      });
-  }
-
-  // 아래는 데모를 위한 UI 코드입니다.
-  displayToken()
-  function displayToken() {
-      var token = getCookie('authorize-access-token');
-
-      if (token) {
-          Kakao.Auth.setAccessToken(token);
-          Kakao.Auth.getStatusInfo()
-              .then(function (res) {
-                  if (res.status === 'connected') {
-                      document.getElementById('token-result').innerText
-                          = 'login success, token: ' + Kakao.Auth.getAccessToken();
-                  }
-              })
-              .catch(function (err) {
-                  Kakao.Auth.setAccessToken(null);
-              });
-      }
-  }
-
-  function getCookie(name) {
-      var parts = document.cookie.split(name + '=');
-      if (parts.length === 2) { return parts[1].split(';')[0]; }
-  }
-</script>
 {% endblock %}
