feat: Articles/category

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
           </a>
         </div>
         <div class="nav_main">
-          <a clsss="nav_main_content" style="text-decoration: none; color:black;" href="{% url 'articles:detail' 1 %}">
+          <a clsss="nav_main_content" style="text-decoration: none; color:black;" href="{% url 'articles:article_all' %}">
             <span class=" nmc" href="/index.html"><b>인테리어후기</b></span>
           </a>
         </div>
