--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -33,12 +33,12 @@
             <div class="user-text">
                 {% if article.review_image %}
                 <!-- title -->
-                <a href="{% url 'articles:detail' article.pk %}"><span
+                <a href="{% url 'articles:detail' article.pk article.slug %}"><span
                         class="fs-2 fw-bold text-white">{{article.title}}</span></a>
                 <!-- username/ create_at -->
                 <p class="fw-bold text-white">{{ article.created_at }}</p>
                 {% else %}
-                <a href="{% url 'articles:detail' article.pk %}"><span
+                <a href="{% url 'articles:detail' article.pk article.slug %}"><span
                         class="fs-2 fw-bold text-white">{{article.title}}</span></a>
                 <!-- username/ create_at -->
                 <p class="fw-bold text-white">{{ article.created_at }}</p>
@@ -68,4 +68,4 @@
 </div>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
-{% endblock %}`
+{% endblock %}
