--- a/articles/templates/articles/detail.html
+++ b/articles/templates/articles/detail.html
@@ -18,14 +18,15 @@
         <div class="title-text d-flex justify-content-center align-items-center flex-column">
             <h3 class="fw-bold text-white" style="font-size: 38px;">{{article.title}}</h3>
             <div>
-                <p class="text-white" style="font-weight: 200">작성자 | {{article.created_at|date:'Y.m.d'}}</p>
+                <p class="text-white" style="font-weight: 200">작성자 {{article.user}} |
+                    {{article.created_at|date:'Y.m.d'}}</p>
             </div>
         </div>
     </section>
 
     <div class="my-3 p-4 container" style="background-color:white; width: 700px;">
         <p style="line-height: 32px; color: rgb(47, 52, 56); font-weight: 300;">
-            <p class="my-5">{{ article.content }}</p>
+        <p class="my-5">{{ article.content }}</p>
         </p>
         {% if article.image %}
         <img src="{{ article.image.url }}" alt="{{ article.image }}" width=p00" height="300">
@@ -41,12 +42,15 @@
             {% endif %}
         </div>
         <div class="d-flex justify-content-end">
-            <a class="nav_a btn btn-link" href="{% url 'articles:index' %}">돌아가기</a>
+            <a class="nav_a btn btn-link" style="text-decoration: none; color:#33c4f0;"
+                href="{% url 'articles:index' %}">돌아가기</a>
             {% if request.user == article.user %}
-            <a class="nav_a btn btn-link" href="{% url 'articles:update' article.pk %}">수정</a>
+            <a class="nav_a btn btn-link" style="text-decoration: none; color:#33c4f0;"
+                href="{% url 'articles:update' article.pk article.slug %}">수정</a>
             {% endif %}
             <!-- 삭제 모달 -->
-            <a class="nav_a btn btn-link" data-bs-toggle="modal" data-bs-target="#delete-modal">
+            <a class="nav_a btn btn-link" style="text-decoration: none; color:#33c4f0;" data-bs-toggle="modal"
+                data-bs-target="#delete-modal">
                 삭제
             </a>
             <!-- Modal -->
@@ -61,7 +65,8 @@
                             삭제하면 내용을 되돌릴 수 없습니다.
                         </div>
                         <div class="modal-footer">
-                            <a class="btn btn-danger" href="{% url 'articles:delete' article.pk article.slug %}">삭제하기</a>
+                            <a class="btn btn-secondary btn-sm"
+                                href="{% url 'articles:delete' article.pk article.slug %}">삭제하기</a>
                             </button>
                         </div>
                     </div>
@@ -71,28 +76,29 @@
         <hr>
         <p class="my-3" style="color: rgb(115, 115, 115)">댓글 <span
                 style="font-weight: 500; color:#33c4f0;">{{article.comment_set.all|length}}</span></p>
-        <ul class="menu">
-            {% for comment in comments %}
-            <li>
-                {{ comment.user }} - {{ comment.content }}
+        {% for comment in comments %}
+        {% csrf_token %}
+        <div class="d-flex justify-content-between">
+            <div>
+                <span class="fw-bold">{{ comment.user }}</span> <span>{{ comment.content }}</span>
+            </div>
+            <div>
                 <!--delete-->
                 {% if user == comment.user %}
-                <form action="{% url 'articles:comments_delete' article.pk comment.pk %}" method="POST"
-                    class="d-inline">
-                    {% csrf_token %}
-                    <button type="submit">삭제</button>
-                </form>
+                <a class="" style="text-decoration: none; color:#33c4f0;"
+                    href="{% url 'articles:comments_delete' article.pk article.slug comment.pk %}">삭제</a>
                 {% endif %}
-            </li>
-            {% empty %}
-            {% endfor %}
+            </div>
+        </div>
+        {% empty %}
+        {% endfor %}
         </ul>
 
         <hr>
 
         <!--create-->
         {% if request.user.is_authenticated %}
-        <form action="{% url 'articles:comment_create' article.pk %}" method="POST">
+        <form action="{% url 'articles:comment_create' article.pk article.slug %}" method="POST">
             {% csrf_token %}
             <div class="row d-flex justify-content-center align-items-center">
                 <textarea class="comment-input p-3" rows="2" cols="10" class="form-control mt-3" name="content"
