--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -33,11 +33,13 @@
             <div class="user-text">
                 {% if article.review_image %}
                 <!-- title -->
+                <img src="{{article.image.url}}" alt="">
                 <a href="{% url 'articles:detail' article.pk article.slug %}"><span
                         class="fs-2 fw-bold text-white">{{article.title}}</span></a>
                 <!-- username/ create_at -->
                 <p class="fw-bold text-white">{{ article.created_at }}</p>
                 {% else %}
+                <img src="{{article.image.url}}" alt="">
                 <a href="{% url 'articles:detail' article.pk article.slug %}"><span
                         class="fs-2 fw-bold text-white">{{article.title}}</span></a>
                 <!-- username/ create_at -->
@@ -52,14 +54,11 @@
         <div class="d-flex justify-content-center mt-3">
             <div class="row p-3 d-flex" style="width:100%; background-color:white">
                 <div class="card m-2 col-lg-10" style="height: 150px;">
-                    <img style="height: 100%;"
-                        src="https://mblogthumb-phinf.pstatic.net/20110926_159/levas2021_1317026319398ibHFo_JPEG/72k_02_diada890j.jpg?type=w2"
-                        class="card-img-top" alt="...">
+                    <img style="height: 100%;" src="{{ article_hit.image.url }}" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">{{article_hit.title}}
                         </p>
                     </div>
-
                 </div>
             </div>
         </div>
