--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,6 @@
               <input type="submit" style="display:none;">
             </form>
           </div>
-
           {% if request.user.is_authenticated %}
             <div>
               <a class="non_a nmc" href="{% url 'accounts:detail' user.username %}">{{ user.username }}님</a>
@@ -68,6 +67,20 @@
             <div>
               <a class="text-body text-decoration-none" href="{% url 'accounts:signout' %} ">
                 <span class="nmc">로그아웃</span></a>
+            </div>
+            <!-- 후기 -->
+            <div class="dropdown">
+              <button class="btn btn dropdown-toggle text-white" style="background-color:#35c5f0" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                글쓰기
+              </button>
+              <ul class=" dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                <li>
+                  <a class="dropdown-item" href="{% url 'articles:create' %}">인테리어 후기</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">상품 후기</a>
+                </li>
+              </ul>
             </div>
           {% else %}
             <div>
@@ -104,6 +117,9 @@
       </footer>
       <!-- Bootstrap JavaScript Libraries -->
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
+
     </body>
 
   </html>
