--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -5,9 +5,9 @@
 {% block content %}
 <div class="section-grid p-5">
     <div>
-        <div class="d-flex justify-content-center mt-3">
-            <div class="row p-3 d-flex" style="width:100%; background-color:white">
-                <div class="card m-2 col-lg-4">
+        <div class="row mt-3" style="width: 100%;">
+            <div class="d-flex justify-content-center m-2 p-3 d-flex" style="background-color:white">
+                <div class="card mx-2 col-lg-4">
                     <img src="https://mblogthumb-phinf.pstatic.net/20110926_159/levas2021_1317026319398ibHFo_JPEG/72k_02_diada890j.jpg?type=w2"
                         class="card-img-top" alt="...">
                     <div class="card-body">
@@ -15,7 +15,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="card m-2 col-lg-4">
+                <div class="card mx-2 col-lg-4">
                     <img src="https://mblogthumb-phinf.pstatic.net/20110926_135/levas2021_1317026318586t44EJ_JPEG/72k_01_diada890j.jpg?type=w2"
                         class="card-img-top" alt="...">
                     <div class="card-body">
@@ -27,22 +27,23 @@
     </div>
     <div>
         {% for article in articles %}
-        <div class="user-wrap" style="width: 100%; height: 300px;">
-            <div class="user-image">
+        <div class="user-wrap mt-3" style="width: 100%; height: 300px;">
+            <div class="user-image m-4 py-3">
+                <img style="height: 300px;" src="{{article.image.url}}" alt="">
             </div>
             <div class="user-text">
                 {% if article.review_image %}
                 <!-- title -->
-                <img src="{{article.image.url}}" alt="">
                 <a href="{% url 'articles:detail' article.pk article.slug %}"><span
                         class="fs-2 fw-bold text-white">{{article.title}}</span></a>
                 <!-- username/ create_at -->
+                <p class="fw-bold text-white">{{ article.user }}</p>
                 <p class="fw-bold text-white">{{ article.created_at }}</p>
                 {% else %}
-                <img src="{{article.image.url}}" alt="">
                 <a href="{% url 'articles:detail' article.pk article.slug %}"><span
                         class="fs-2 fw-bold text-white">{{article.title}}</span></a>
                 <!-- username/ create_at -->
+                <p class="fw-bold text-white">{{ article.user }}</p>
                 <p class="fw-bold text-white">{{ article.created_at }}</p>
                 {% endif %}
             </div>
@@ -51,9 +52,9 @@
     </div>
     <div>
         {% for article_hit in articles_hits %}
-        <div class="d-flex justify-content-center mt-3">
-            <div class="row p-3 d-flex" style="width:100%; background-color:white">
-                <div class="card m-2 col-lg-10" style="height: 150px;">
+        <div class="mt-3" style=" width: 100%;">
+            <div class="row m-2 p-3 d-flex justify-content-center" style="width:100%; background-color:white">
+                <div class="card m-2 col-lg-8" style="height: 150px;">
                     <img style="height: 100%;" src="{{ article_hit.image.url }}" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">{{article_hit.title}}
