--- a/articles/templates/articles/detail.html
+++ b/articles/templates/articles/detail.html
@@ -5,37 +5,31 @@
 {{ aritcles.click }}
 {% block content %}
 
-  <body style="background-color: #F7F9FA">
+<body style="background-color: #F7F9FA">
     <section class="title-banner">
-<<<<<<< HEAD
         <div class='d-flex justify-content-center' style='height:300px;'>
             {% if article.image %}
             <img src="{{article.image.url}}" alt="" class='w-100'
                 style='height:300px; object-fit:cover; filter:brightness(0.6);'>
-=======
-      <div class='d-flex justify-content-center' style='height:300px;'>
-        {% if article.image %}
-          <img src="https://mblogthumb-phinf.pstatic.net/20151217_196/tamanoa_14503391844435U1wV_JPEG/%C5%FC%C5%FC%C0%CC_1.jpg?type=w2" alt="" class='w-100' style='height:300px; object-fit:cover; filter:brightness(0.6);'>
->>>>>>> 78c4b2fca5448a2739d3930d74af680af1d22416
+
         </div>
-      {% else %}
+        {% else %}
         <div class="bg-dark w-100" style="height: 300px"></div>
-      {% endif %}
-      <div class="title-text d-flex justify-content-center align-items-center flex-column">
-        <h3 class="fw-bold text-white" style="font-size: 38px;">{{article.title}}</h3>
-        <div>
-          <p class="text-white" style="font-weight: 200">작성자
-            {{article.user}}
-            |
-            {{article.created_at|date:'Y.m.d'}}</p>
+        {% endif %}
+        <div class="title-text d-flex justify-content-center align-items-center flex-column">
+            <h3 class="fw-bold text-white" style="font-size: 38px;">{{article.title}}</h3>
+            <div>
+                <p class="text-white" style="font-weight: 200">작성자
+                    {{article.user}}
+                    |
+                    {{article.created_at|date:'Y.m.d'}}</p>
+            </div>
         </div>
-      </div>
     </section>
 
     <div class="my-3 p-4 container" style="background-color:white; width: 700px;">
-      <p style="line-height: 32px; color: rgb(47, 52, 56); font-weight: 300;">
+        <p style="line-height: 32px; color: rgb(47, 52, 56); font-weight: 300;">
         <p class="my-5">{{ article.content }}</p>
-<<<<<<< HEAD
         </p>
         {% if article.image %}
         <img src="{{ article.image.url }}" alt="{{ article.image }}" height="300">
@@ -105,127 +99,124 @@
 
         <hr>
 
-        <!--create-->
-=======
-      </p>
-      {% if article.image %}
-        <img src="{{ article.image.url }}" alt="{{ article.image }}" width="300" height="300">
-      {% endif %}
-      <div class="my-2">
-        <!-- 로그인 했다면 -->
->>>>>>> 78c4b2fca5448a2739d3930d74af680af1d22416
         {% if request.user.is_authenticated %}
-          {% if request.user in article.like_users.all %}
-            <i id="like-btn" data-article-id="{{ article.pk }}" class="fa-solid fa-heart"></i>
-          {% else %}
-            <i id="like-btn" data-article-id="{{ article.pk }}" class="fa-regular fa-heart"></i>
-          {% endif %}
-          <span id="like-count">{{ article.like_users.count }}</span>
+        {% if request.user in article.like_users.all %}
+        <i id="like-btn" data-article-id="{{ article.pk }}" class="fa-solid fa-heart"></i>
+        {% else %}
+        <i id="like-btn" data-article-id="{{ article.pk }}" class="fa-regular fa-heart"></i>
         {% endif %}
-      </div>
-      <div class="d-flex justify-content-end">
-        <a class="nav_a btn btn-link" style="text-decoration: none; color:#33c4f0;" href="{% url 'articles:index' %}">돌아가기</a>
+        <span id="like-count">{{ article.like_users.count }}</span>
+        {% endif %}
+    </div>
+    <div class="d-flex justify-content-end">
+        <a class="nav_a btn btn-link" style="text-decoration: none; color:#33c4f0;"
+            href="{% url 'articles:index' %}">돌아가기</a>
         {% if request.user == article.user %}
-          <a class="nav_a btn btn-link" style="text-decoration: none; color:#33c4f0;" href="{% url 'articles:update' article.pk article.slug %}">수정</a>
+        <a class="nav_a btn btn-link" style="text-decoration: none; color:#33c4f0;"
+            href="{% url 'articles:update' article.pk article.slug %}">수정</a>
         {% endif %}
         <!-- 삭제 모달 -->
-        <a class="nav_a btn btn-link" style="text-decoration: none; color:#33c4f0;" data-bs-toggle="modal" data-bs-target="#delete-modal">
-          삭제
+        <a class="nav_a btn btn-link" style="text-decoration: none; color:#33c4f0;" data-bs-toggle="modal"
+            data-bs-target="#delete-modal">
+            삭제
         </a>
         <!-- Modal -->
         <div class="modal fade" id="delete-modal" tabindex="-1" aria-labelledby="delete-liber" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h1 class="modal-title fs-5" id="delete-liber">삭제하시겠습니까?</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                삭제하면 내용을 되돌릴 수 없습니다.
-              </div>
-              <div class="modal-footer">
-                <a class="btn btn-secondary btn-sm" href="{% url 'articles:delete' article.pk article.slug %}">삭제하기</a>
-              </button>
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="delete-liber">삭제하시겠습니까?</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        삭제하면 내용을 되돌릴 수 없습니다.
+                    </div>
+                    <div class="modal-footer">
+                        <a class="btn btn-secondary btn-sm"
+                            href="{% url 'articles:delete' article.pk article.slug %}">삭제하기</a>
+                        </button>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
     <hr>
     <p class="my-3" style="color: rgb(115, 115, 115)">댓글
-      <span style="font-weight: 500; color:#33c4f0;">{{article.comment_set.all|length}}</span></p>
+        <span style="font-weight: 500; color:#33c4f0;">{{article.comment_set.all|length}}</span>
+    </p>
     {% for comment in comments %}
-      {% csrf_token %}
-      <div class="d-flex justify-content-between">
-        <div>
-          <span class="fw-bold">{{ comment.user }}</span>
-          <span>{{ comment.content }}</span>
-        </div>
-        <div>
-          <!--delete-->
-          {% if user == comment.user %}
-            <a class="" style="text-decoration: none; color:#33c4f0;" href="{% url 'articles:comments_delete' article.pk article.slug comment.pk %}">삭제</a>
-          {% endif %}
-        </div>
-      </div>
-      {% empty %}
-    {% endfor %}
-</ul>
-
-<hr>
-
-<!--create-->
-{% if request.user.is_authenticated %}
-  <form action="{% url 'articles:comment_create' article.pk article.slug %}" method="POST">
     {% csrf_token %}
-    <div class="row d-flex justify-content-center align-items-center">
-      <textarea class="form-control mt-3" rows="2" cols="10" name="content" placeholder="댓글을 남겨주세요."></textarea>
-      <div class="d-flex justify-content-end p-0">
-        <input class="btn" type="submit" style="color:#33c4f0" value="작성">
-      </div>
+    <div class="d-flex justify-content-between">
+        <div>
+            <span class="fw-bold">{{ comment.user }}</span>
+            <span>{{ comment.content }}</span>
+        </div>
+        <div>
+            <!--delete-->
+            {% if user == comment.user %}
+            <a class="" style="text-decoration: none; color:#33c4f0;"
+                href="{% url 'articles:comments_delete' article.pk article.slug comment.pk %}">삭제</a>
+            {% endif %}
+        </div>
     </div>
-  </form>
-{% else %}
-  <a href="{% url 'accounts:login' %}">[댓글을 작성하려면 로그인하세요.]</a>
-{% endif %}
-</div>
+    {% empty %}
+    {% endfor %}
+    </ul>
+
+    <hr>
+
+    <!--create-->
+    {% if request.user.is_authenticated %}
+    <form action="{% url 'articles:comment_create' article.pk article.slug %}" method="POST">
+        {% csrf_token %}
+        <div class="row d-flex justify-content-center align-items-center">
+            <textarea class="form-control mt-3" rows="2" cols="10" name="content" placeholder="댓글을 남겨주세요."></textarea>
+            <div class="d-flex justify-content-end p-0">
+                <input class="btn" type="submit" style="color:#33c4f0" value="작성">
+            </div>
+        </div>
+    </form>
+    {% else %}
+    <a href="{% url 'accounts:login' %}">[댓글을 작성하려면 로그인하세요.]</a>
+    {% endif %}
+    </div>
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script>
-// (1) 좋아요 버튼
-const likeBtn = document.querySelector('#like-btn')
-// (2) 좋아요 버튼을 클릭하면, 함수 실행
-likeBtn.addEventListener('click', function (event) {
-// 서버로 비동기 요청을 하고 싶음
-console.log(event.target.dataset)
-axios({method: 'get', url: `/articles/${event.target.dataset.articleId}/like/`}).then(response => {
-  console.log(response)
-  console.log(response.data)
-  // event.target.classList.toggle('bi-heart')
-  // event.target.classList.toggle('bi-heart-fill')
-  if (response.data.isLiked === true) {
-    event
-      .target
-      .classList
-      .add('bi-heart-fill')
-    event
-      .target
-      .classList
-      .remove('bi-heart')
-  } else {
-    event
-      .target
-      .classList
-      .add('bi-heart')
-    event
-      .target
-      .classList
-      .remove('bi-heart-fill')
-  }
-  const likeCount = document.querySelector('#like-count')
-  likeCount.innerText = response.data.likeCount
-})
-})
+    // (1) 좋아요 버튼
+    const likeBtn = document.querySelector('#like-btn')
+    // (2) 좋아요 버튼을 클릭하면, 함수 실행
+    likeBtn.addEventListener('click', function (event) {
+        // 서버로 비동기 요청을 하고 싶음
+        console.log(event.target.dataset)
+        axios({ method: 'get', url: `/articles/${event.target.dataset.articleId}/like/` }).then(response => {
+            console.log(response)
+            console.log(response.data)
+            // event.target.classList.toggle('bi-heart')
+            // event.target.classList.toggle('bi-heart-fill')
+            if (response.data.isLiked === true) {
+                event
+                    .target
+                    .classList
+                    .add('bi-heart-fill')
+                event
+                    .target
+                    .classList
+                    .remove('bi-heart')
+            } else {
+                event
+                    .target
+                    .classList
+                    .add('bi-heart')
+                event
+                    .target
+                    .classList
+                    .remove('bi-heart-fill')
+            }
+            const likeCount = document.querySelector('#like-count')
+            likeCount.innerText = response.data.likeCount
+        })
+    })
 </script>
 {% endblock %}
