--- a/articles/templates/articles/detail.html
+++ b/articles/templates/articles/detail.html
@@ -8,8 +8,8 @@
     <section class="title-banner">
         <div class='d-flex justify-content-center' style='height:300px;'>
             {% if article.image %}
-            <img src="https://mblogthumb-phinf.pstatic.net/20151217_196/tamanoa_14503391844435U1wV_JPEG/%C5%FC%C5%FC%C0%CC_1.jpg?type=w2"
-                alt="" class='w-100' style='height:300px; object-fit:cover; filter:brightness(0.6);'>
+            <img src="{{ article.image.url }}" alt="{{ article.title }}" class='w-100'
+                style='height:300px; object-fit:cover; filter:brightness(0.6);'>
         </div>
         {% else %}
         <div class="bg-dark w-100" style="height: 300px"></div>
@@ -34,9 +34,9 @@
             <!-- 로그인 했다면 -->
             {% if request.user.is_authenticated %}
             {% if request.user in article.like_users.all %}
-            <i id="like-btn" data-article-id="{{ article.pk }}" class="fa-solid fa-heart"></i>
+            <i id="like-btn" class="fa-solid fa-heart"></i>
             {% else %}
-            <i id="like-btn" data-article-id="{{ article.pk }}" class="fa-regular fa-heart"></i>
+            <i id="like-btn" class="fa-regular fa-heart"></i>
             {% endif %}<span id="like-count">{{ article.like_users.count }}</span>
             {% endif %}
         </div>
@@ -44,7 +44,6 @@
             <a class="nav_a btn btn-link" style="text-decoration: none; color:#33c4f0;"
                 href="{% url 'articles:index' %}">돌아가기</a>
             {% if request.user == article.user %}
-            <a class="nav_a btn btn-link" href="{% url 'articles:update' article.pk %}">수정</a>
             <a class="nav_a btn btn-link" style="text-decoration: none; color:#33c4f0;"
                 href="{% url 'articles:update' article.pk article.slug %}">수정</a>
             {% endif %}
@@ -68,8 +67,6 @@
                                 삭제하면 내용을 되돌릴 수 없습니다.
                             </div>
                             <div class="modal-footer">
-                                <a class="btn btn-danger"
-                                    href="{% url 'articles:delete' article.pk article.slug %}">삭제하기</a>
                                 <a class="btn btn-secondary btn-sm"
                                     href="{% url 'articles:delete' article.pk article.slug %}">삭제하기</a>
                                 </button>
@@ -90,16 +87,13 @@
             <div>
                 <!--delete-->
                 {% if user == comment.user %}
-                <form action="{% url 'articles:comments_delete' article.pk comment.pk %}" method="POST"
+                <form action="{% url 'articles:comments_delete' article.pk article.slug comment.pk %}" method="POST"
                     class="d-inline">
                     {% csrf_token %}
-                    <button type="submit">삭제</button>
+                    <a class="" style="text-decoration: none; color:#33c4f0;"
+                        href="{% url 'articles:comments_delete' article.pk article.slug comment.pk %}">삭제</a>
                 </form>
-                <a class="" style="text-decoration: none; color:#33c4f0;"
-                    href="{% url 'articles:comments_delete' article.pk article.slug comment.pk %}">삭제</a>
                 {% endif %}
-                </li>
-
             </div>
         </div>
         {% empty %}
@@ -136,7 +130,7 @@
         console.log(event.target.dataset)
         axios({
             method: 'get',
-            url: `/articles/${event.target.dataset.articleId}/like/`
+            url: "{% url 'articles:like' article.pk article.slug %}"
         })
             .then(response => {
                 console.log(response)
