style : product detail

--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -1,171 +1,190 @@
 {% extends 'base.html' %}
 {% load social_share %}
+{% load humanize %}
 {% block content %}
-<div class="container p-5">
-  <!-- 상품 -->
-  <section>
-    <div class="d-flex align-items-center flex-column">
-      <div class="m-3">
-        <img src="{{ product.product_image.url }}" alt="" width="300" height="300">
-      </div>
-    </div>
-    <p class="text-muted fs-4">
-      {{ product.brand }}
-    </p>
-    <h3 class="fw-bold">
-      {{ product.title }}
-    </h3>
-    <p class="fs-4">
-      {{ product.price }}
-    </p>
-  </section>
-  <br>
-  <div class="display-2 d-flex align-items-end">
-    <div class="star-ratings">
-      <div class="star-ratings-fill space-x-2 text-lg" style="width: calc({{ grade_avg.grade_avg__avg }}* 20%);">
-        <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
-      </div>
-      <div class="star-ratings-base space-x-2 text-lg">
-        <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
-      </div>
-    </div>
-    <span class="fw-bold display-3 align-text-bottom mt-2 mx-3" style="line-height: 65px;">
-      {{ grade_avg.grade_avg__avg|floatformat }}
-    </span>
-  </div>
 
-  <br>
-  <h1>리뷰
-    <span>
-      <a href="{% url 'products:reviews_create' product.pk %}">리뷰쓰기</a>
-    </span>
-  </h1>
-  <br>
-  <h1>장바구니 담기
-    <form action="{% url 'cart:product_add' product.id %}" method="POST">
-      {{ add_to_cart }}
-      {% csrf_token %}
-      <input type="submit" value="Add to Cart">
-    </form>
-
-  </h1>
-  내구성 :
-  {{ grade_all.grade_durability__avg|floatformat }}
-  | 가격:
-  {{ grade_all.grade_price__avg|floatformat }}
-  | 디자인:
-  {{ grade_all.grade_design__avg|floatformat }}
-  | 실용성:
-  {{ grade_all.grade_practicality__avg|floatformat }}
-
-  {% for review in reviews %}
-  <button type="button" class="btn btn-light">{% post_to_facebook post.get_absolute_url "Facebook" %}</button>
-  <a id="review_{{ review.pk }}"></a>
-  {% post_to_facebook object_or_url "Post to Facebook!" %}
-  {% post_to_twitter "New Song: . Check it out!" object_or_url "Post to Twitter" %}
-  {% copy_to_clipboard object_or_url "Copy to clipboard!" %}
-  <!-- 버튼 -->
-  <div class="accordion" id="accordionPanelsStayOpenExample">
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse"
-          data-bs-target="#panelsStayOpen-{{ review.pk }}" aria-expanded="false"
-          aria-controls="panelsStayOpen-{{ review.pk }}">
-          <div class="container d-flex justify-content-between">
-            <div>
-              작성자 :
-              {{ review.user }}
-              | 작성자 평균 평점 :
-              {{ review.grade_avg }}
+<body style="background-color: rgb(249, 249, 249);">
+  <div class="container p-0 mt-3" style="width: 500px; background-color: white;">
+    <!-- 상품 -->
+    <section>
+      <div class="d-flex align-items-center flex-column">
+        <div class="">
+          <img src="{{ product.product_image.url }}" alt="" width="100%" height="100%">
+        </div>
+      </div>
+      <div class="px-4 mt-3">
+        <p class="text-muted m-0" style="font-size: 14px; font-weight: 700;">
+          {{ product.brand }}
+        </p>
+        <p class=" m-0" style="font-size: 17px;">
+          {{ product.title }}
+        </p>
+        <div class="d-flex align-items-center">
+          <div class="star-ratings">
+            <div class="star-ratings-fill space-x-2 text-lg"
+              style="width: calc({{ grade_avg.grade_avg__avg }}* 20%); font-size:16px">
+              <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
             </div>
-            <div>
-              <!-- 작성일자 : ~시간 전 표시 -->
-              {% if review.created_string == False %}
-              <!-- 7일이 지나면 날짜로 출력 -->
-              {{ review.created_at|date:'m월 d일' }}
-              {% else %}
-              <!-- 7일이 지나기 전이라면 함수 대입한 결과 -->
-              {{ review.created_string }}
-              {% endif %}
+            <div class="star-ratings-base space-x-2 text-lg" style="font-size: 16px">
+              <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
             </div>
           </div>
+          <span class="fw-bold align-text-bottom mx-2" style="font-size: 13px; color: #33c4f0">
+            {{ grade_avg.grade_avg__avg|floatformat }}
+          </span>
+        </div>
+        <h3 class="mt-2"
+          style="font-size: 20px; color: rgb(66, 66, 66); font-weight: 700; border-bottom: 1px solid rgb(249, 249, 249)">
+          {{ product.price|intcomma }}원
+        </h3>
+        <h4 style="border-bottom: 1px solid rgb(208, 208, 208);"></h4>
+    </section>
+
+    <div class="px-4">
+      <span>
+        <a class="btn form-control mt-1" style="background-color: #33c4f0; color: white; font-weight: 700;"
+          href="{% url 'products:reviews_create' product.pk %}">리뷰쓰기</a>
+      </span>
+    </div>
+    <form action="{% url 'cart:product_add' product.id %}" method="POST">
+      <input type="number" name="quantity" value="1" require id="id_quantity" style="display: none;">
+      <input type="hidden" name="is_update" value="False" require id="id_is_quantity">
+      {% csrf_token %}
+      <div class="d-flex justify-content-center">
+        <input class="btn text-center" type="submit" value="장바구니 담기"
+          style="background-color: none; color: #33c4f0; font-weight: 700;">
+      </div>
+    </form>
+  </div>
+  <div class="container my-3 d-flex align-items-center justify-content-center"
+    style="background-color: black; width:500px; height: 75px;">
+    <a class="non_a"
+      href="https://www.hrd.go.kr/hrdp/co/pcobo/PCOBO0100P.do?tracseId=AIG20220000366729&tracseTme=4&crseTracseSe=C0061&trainstCstmrId=500020039927#undefined">
+      <p class="non_a text-center m-0" style="color:white; font-weight: 700">하이퍼그로스 KDT 풀스택 과정 2기 지원하기 ></p>
+    </a>
+  </div>
+  <div class=" container py-3 mt-3" style="width: 500px; background-color: white;">
+    <div class="my-3 px-4" style="color:#33c4f0;">
+      <h4 style="font-size: 17px; font-weight: 700; color:black">유저들의 리뷰
+        <span style="color:#33c4f0">{{ reviews.count }}</span>
+      </h4>
+      <div style="color: rgb(66, 66, 66)">
+        내구성
+        <span style="color: #33c4f0; font-weight: 700;"> {{ grade_all.grade_durability__avg|floatformat }}</span>
+        <span style="font-weight: 200">| </span>디자인
+        <span style="color: #33c4f0; font-weight: 700;"> {{ grade_all.grade_design__avg|floatformat }}</span>
+        <span style="font-weight: 200">| </span>실용성
+        <span style="color: #33c4f0; font-weight: 700;"> {{ grade_all.grade_practicality__avg|floatformat }}</span>
+        <span style="font-weight: 200">| </span>가격
+        <span style="color: #33c4f0; font-weight: 700;"> {{ grade_all.grade_price__avg|floatformat}}</span>
+      </div>
+    </div>
+
+    {% for review in reviews %}
+    <div class="accordion px-4" id="accordionPanelsStayOpenExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+          <button class="accordion-button text-body" style="background-color: white;" type="button"
+            data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-{{ review.pk }}" aria-expanded="false"
+            aria-controls="panelsStayOpen-{{ review.pk }}">
+            <div class="container d-flex justify-content-between">
+              <div>
+
+                {{ review.user }}
+                <span class="fw-lighter" style="color:black">| <span style="color:#33c4f0">★</span></span>
+                {{ review.grade_avg }}
+              </div>
+              <div>
+                <!-- 작성일자 : ~시간 전 표시 -->
+                {% if review.created_string == False %}
+                <!-- 7일이 지나면 날짜로 출력 -->
+                {{ review.created_at|date:'m월 d일' }}
+                {% else %}
+                <!-- 7일이 지나기 전이라면 함수 대입한 결과 -->
+                {{ review.created_string }}
+                {% endif %}
+              </div>
+            </div>
+      </div>
 
 
-        </button>
+      </button>
       </h2>
       <!-- 내용 -->
       <div id="panelsStayOpen-{{ review.pk }}" class="accordion-collapse collapse"
         aria-labelledby="panelsStayOpen-headingOne">
         <div class="accordion-body">
-          <div>
-            <h3>항목별 평점</h3>
-            <div class="d-flex">
-              내구성 :
-              <div class="star-ratings">
-                <div class="star-ratings-fill" style="width: calc({{ review.grade_durability }} * 20%);">
-                  <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
-                </div>
-                <div class="star-ratings-base">
-                  <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
-                </div>
+          <div class="d-flex" style="color:rgb(66, 66, 66)">
+            내구성&nbsp&nbsp
+            <div class="star-ratings">
+              <div class="star-ratings-fill" style="width: calc({{ review.grade_durability }} * 20%);">
+                <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
               </div>
-              | 가격 :
-              <div class="star-ratings">
-                <div class="star-ratings-fill space-x-2 text-lg" style="width: calc({{ review.grade_price }} * 20%);">
-                  <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
-                </div>
-                <div class="star-ratings-base space-x-2 text-lg">
-                  <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
-                </div>
+              <div class="star-ratings-base">
+                <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
               </div>
             </div>
-            <div class="d-flex">
-
-              | 디자인 :
-              <div class="star-ratings">
-                <div class="star-ratings-fill space-x-2 text-lg" style="width: calc({{ review.grade_design }} * 20%);">
-                  <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
-                </div>
-                <div class="star-ratings-base space-x-2 text-lg">
-                  <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
-                </div>
+            가격 &nbsp&nbsp
+            <div class="star-ratings">
+              <div class="star-ratings-fill space-x-2 text-lg" style="width: calc({{ review.grade_price }} * 20%);">
+                <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
               </div>
-              | 실용성 :
-              <div class="star-ratings">
-                <div class="star-ratings-fill space-x-2 text-lg"
-                  style="width: calc({{ review.grade_practicality }} * 20%);">
-                  <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
-                </div>
-                <div class="star-ratings-base space-x-2 text-lg">
-                  <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
-                </div>
+              <div class="star-ratings-base space-x-2 text-lg">
+                <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
               </div>
             </div>
-
-            {% if review.review_image %}
-            <p>
-              <img src="{{ review.review_image.url }}" alt="" width="300" height="300">
-            </p>
-            {% endif %}
-            <p>
-              {{ review.content }}
-            </p>
           </div>
-          <a href="{% url 'products:reviews_update' product.pk review.pk%}">수정하기</a>
-          <a href="{% url 'products:reviews_delete' product.pk review.pk %}">삭제하기</a>
-          <a href="{% url 'products:reviews_likes' product.pk review.pk %}">좋아요</a>
-          <p>좋아요 |
-            {{ review.review_likes.count }}
-            {% for us in review.review_likes.all %}
-            <span>{{ us }}</span>
-            {% endfor %}
+          <div class="d-flex">
+
+            디자인&nbsp&nbsp
+            <div class="star-ratings">
+              <div class="star-ratings-fill space-x-2 text-lg" style="width: calc({{ review.grade_design }} * 20%);">
+                <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+              </div>
+              <div class="star-ratings-base space-x-2 text-lg">
+                <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+              </div>
+            </div>
+            실용성&nbsp&nbsp
+            <div class="star-ratings mb-3">
+              <div class="star-ratings-fill space-x-2 text-lg"
+                style="width: calc({{ review.grade_practicality }} * 20%);">
+                <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+              </div>
+              <div class="star-ratings-base space-x-2 text-lg">
+                <span>★</span><span>★</span><span>★</span><span>★</span><span>★</span>
+              </div>
+            </div>
+          </div>
+
+          {% if review.review_image %}
+          <p>
+            <img src="{{ review.review_image.url }}" alt="" width="300" height="300">
           </p>
+          {% endif %}
+          <p>
+            {{ review.content }}
+          </p>
+        </div>
+        <div class="px-4 d-flex justify-content-between" style="font-size: 14px">
+          <p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+              class="bi bi-hand-thumbs-up" viewBox="0 0 16 16">
+              <path
+                d="M8.864.046C7.908-.193 7.02.53 6.956 1.466c-.072 1.051-.23 2.016-.428 2.59-.125.36-.479 1.013-1.04 1.639-.557.623-1.282 1.178-2.131 1.41C2.685 7.288 2 7.87 2 8.72v4.001c0 .845.682 1.464 1.448 1.545 1.07.114 1.564.415 2.068.723l.048.03c.272.165.578.348.97.484.397.136.861.217 1.466.217h3.5c.937 0 1.599-.477 1.934-1.064a1.86 1.86 0 0 0 .254-.912c0-.152-.023-.312-.077-.464.201-.263.38-.578.488-.901.11-.33.172-.762.004-1.149.069-.13.12-.269.159-.403.077-.27.113-.568.113-.857 0-.288-.036-.585-.113-.856a2.144 2.144 0 0 0-.138-.362 1.9 1.9 0 0 0 .234-1.734c-.206-.592-.682-1.1-1.2-1.272-.847-.282-1.803-.276-2.516-.211a9.84 9.84 0 0 0-.443.05 9.365 9.365 0 0 0-.062-4.509A1.38 1.38 0 0 0 9.125.111L8.864.046zM11.5 14.721H8c-.51 0-.863-.069-1.14-.164-.281-.097-.506-.228-.776-.393l-.04-.024c-.555-.339-1.198-.731-2.49-.868-.333-.036-.554-.29-.554-.55V8.72c0-.254.226-.543.62-.65 1.095-.3 1.977-.996 2.614-1.708.635-.71 1.064-1.475 1.238-1.978.243-.7.407-1.768.482-2.85.025-.362.36-.594.667-.518l.262.066c.16.04.258.143.288.255a8.34 8.34 0 0 1-.145 4.725.5.5 0 0 0 .595.644l.003-.001.014-.003.058-.014a8.908 8.908 0 0 1 1.036-.157c.663-.06 1.457-.054 2.11.164.175.058.45.3.57.65.107.308.087.67-.266 1.022l-.353.353.353.354c.043.043.105.141.154.315.048.167.075.37.075.581 0 .212-.027.414-.075.582-.05.174-.111.272-.154.315l-.353.353.353.354c.047.047.109.177.005.488a2.224 2.224 0 0 1-.505.805l-.353.353.353.354c.006.005.041.05.041.17a.866.866 0 0 1-.121.416c-.165.288-.503.56-1.066.56z" />
+            </svg>
+            {{ review.review_likes.count }}
+          </p>
+          <div>
+            <a class="non_a mx-1" href="{% url 'products:reviews_update' product.pk review.pk%}">수정하기</a>
+            <a class="non_a mx-1" href="{% url 'products:reviews_delete' product.pk review.pk %}">삭제하기</a>
+            <a class="non_a ms-1" href="{% url 'products:reviews_likes' product.pk review.pk %}">좋아요</a>
+          </div>
         </div>
       </div>
     </div>
+    {% endfor %}
   </div>
-  {% endfor %}
-</div>
+</body>
 
 {% add_copy_script %}
 {% endblock %}
